--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -8,7 +8,7 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
@@ -24,7 +24,7 @@ body {
     color: #d9dcd6;
 }
 
-.header nav {
+nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -50,7 +50,7 @@ p {
     font-size: 16px;
 }
 
-.hero {
+figure {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -69,13 +69,13 @@ p {
     margin-left: 25px;
 }
 
-.content {
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-.benefits {
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -84,15 +84,14 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
-    
 }
 
-.benefit-lead, .benefit-brand,.benefit-cost {
+section {
     margin-bottom: 32px;
     color: #ffffff;
 } /* merged benefit-lead, benefit-brand, benefit-cost */
 
-.benefit-lead h3, .benefit-brand h3, .benefit-cost h3  {
+h3  {
     margin-bottom: 10px;
     text-align: center;
 } /* merged .benefit-lead h3, .benefit-brand h3, .benefit-cost h3 */
@@ -118,20 +117,20 @@ p {
 }
 /* merged .search-engine-optimization img, .online-reputation-management img, .social-media-marketing img */
 
-.search-engine-optimization h2,.online-reputation-management h2, .social-media-marketing h2 {
+h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 /* merged .search-engine-optimization h2,.online-reputation-management h2, .social-media-marketing h2 */
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h4 {
+h4 {
     font-size: 20px;
 }
 /* changed fotter from H2 to H4 */
